# ficBuster

./: battler.py  book  epubClass.py  final.py  main.js  main.py  manifest.json  package-lock.json  package.json  pyproject.toml  random.html  space.py  src.py  sus  test.epub  test.txt  test_file.html  work.py
.github/workflows/: python-app.yml
epub/: epub..py  epub.py  init.py
epub/templates/: chapter_template.xhtml  meta_template  ncx_template.ncx  opf_template.opf  title_template.xhtml
server/: server.py
server/static/: home.html
space/: client.py  decorators.py  epubClass.py  fetch_decorator.py  final.py  init.py  parser.py  scraper.py  test_client.py  test_space.py  test_validator.py  testing.py  validator.py
templates/: stylesheet.css
