[tool.poetry]
name = "booker"
version = "0.1.0"
description = ""
authors = ["mwachala <berrybretch@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
BeautifulSoup4 = "^4.9.1"
aiohttp = "^3.6.2"
jinja2 = "^2.11.2"
cherrypy = "^18.6.0"
pytest = "^6.0.2"
lxml = "^4.5.2"
tenacity = "^6.2.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
